Added categories functionality Added javascript for changing images